some changes updated

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <hr class="linee">
                 </div>
                 <h2 class="portf">Portfolio</h2>
-                <p class="para">I am a web developer and a programmer. I am passionate about coding and I love to learn new things. I am a quick learner and I am always ready to learn new things. I am a hardworking person and I am always ready to work hard to achieve my goals.</p>
+                <p class="para">I am a web developer and a programmer. I am passionate about coding and I love to learn new things. I am a quick learner and I am always ready to learn new things. I am a hardworking person and i am always ready to work hard to achieve my goals.</p>
                 <button class="ebtn">Explore Now</button>
             </div>
         </div>
@@ -63,7 +63,7 @@
         
                     <h4>🎓 Education:</h4>
                     <ul>
-                        <li>📚 <strong>Master of Computer Applications (MCA)</strong> - Audisankara Institute of Technology (2024)</li>
+                        <li>📚 <strong>Master of Computer Applications (MCA) </strong> - Audisankara Institute of Technology (2024)</li>
                         <li>🎓 <strong>Bachelor of Science (B.Sc)</strong> - Dr. NTR Degree College (2022)</li>
                     </ul>
         
