some functionalities updated

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <h2 class="portf">Portfolio</h2>
                 <p class="para">I am a web developer and a programmer. I am passionate about coding and I love to learn new things. I am a quick learner and I am always ready to learn new things. I am a hardworking person and i am always ready to work hard to achieve my goals.</p>
-                <button class="ebtn">Explore Now</button>
+                <button class="ebtn" id="ebbtn">Explore Now</button>
             </div>
         </div>
     </div>
