--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     </div>
     <div id="main-content" style="display: none;">
         <header>
-            <div class="logo"><a href="#">Portfolio</a></div>
-          
-            <!-- Hamburger Icon -->
+            <div class="logo">
+                <a href="index.php">Manikanta Reddy</a>
+            </div>
             <div class="hamburger" onclick="toggleMenu()">
               <div></div>
               <div></div>
             </div>
           
-            <!-- Desktop Nav -->
             <nav>
               <ul>
                 <li><a href="#home">Home</a></li>
