--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of Manikanta Reddy - Frontend Developer with skills in React, JS, HTML, CSS, and Python.">
+    <meta name="keywords" content="Frontend Developer, React, HTML, CSS, JavaScript, MCA, Portfolio">
+    <meta name="author" content="Manikanta Reddy">
+    <link rel="icon" href="./photos/favicon.png" type="image/png">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="fw-semibold">
@@ -14,7 +19,7 @@
     </div>
     <div id="main-content" style="display: none;">
         <header>
-            <div class="logo"><a href="#">Manikantya Reddy</a></div>
+            <div class="logo"><a href="#">Manikanta Reddy</a></div>
             <div class="hamburger" onclick="toggleMenu()">
               <div></div>
               <div></div>
@@ -26,6 +31,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="./My Resumee (2).pdf">Download Resume</a></li>
               </ul>
             </nav>
           </header>
