mobile responsive updated

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <a href="#about" onclick="toggleMenu()">About</a>
             <a href="#projects" onclick="toggleMenu()">Projects</a>
             <a href="#contact" onclick="toggleMenu()">Contact</a>
+            <a href="./My Resumee (2).pdf" onclick="toggleMenu()">Download Resume</a>
           </div>
           
         <div class="container1">
