exit option updated

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="hamburger" onclick="toggleMenu()">
               <div></div>
               <div></div>
+              <div></div>
             </div>
           
             <nav>
