--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="./My Resumee (2).pdf">Download Resume</a></li>
+                <li><a href="./My_Resumee(2).pdf">Download Resume</a></li>
               </ul>
             </nav>
           </header>
